--- a/render.yaml
+++ b/render.yaml
@@ -1,52 +1,22 @@
 databases:
-  - name: n8n
+  - name: metabase
     region: frankfurt
     plan: starter
-    databaseName: n8n
+    databaseName: metabase
 
 services:
-  # A Docker web service
   - type: web
-    name: n8n
+    name: metabase
     env: docker
-    repo: https://github.com/sarveshpro/n8n-heroku
+    repo: https://github.com/render-examples/metabase
     region: frankfurt
     plan: starter
     branch: master
-    healthCheckPath: /healthz
+    healthCheckPath: /api/health
     envVars:
-      - key: N8N_BASIC_AUTH_ACTIVE
-        value: true
-      - key: N8N_BASIC_AUTH_USER
-        value: user
-      - key: N8N_BASIC_AUTH_PASSWORD
-        value: password
-      - key: GENERIC_TIMEZONE
-        value: Europe/Berlin
-      - key: DATA_FOLDER
-        value: /root/.n8n/
-      - key: DB_POSTGRESDB_DATABASE
+      - key: MB_DB_CONNECTION_URI
         fromDatabase:
-          name: n8n
-          property: database
-      - key: DB_POSTGRESDB_HOST
-        fromDatabase:
-          name: n8n
-          property: host
-      - key: DB_POSTGRESDB_PORT
-        fromDatabase:
-          name: n8n
-          property: port
-      - key: DB_POSTGRESDB_USER
-        fromDatabase:
-          name: n8n
-          property: user
-      - key: DB_POSTGRESDB_PASSWORD
-        fromDatabase:
-          name: n8n
-          property: password
-    disk:
-      name: n8n
-      mountPath: /root/.n8n/
-      sizeGB: 1
+          name: metabase
+          property: connectionString
+
 
